# cross-common

./: .gitignore  README.md  build_android_arm64_all.sh  build_ios_all.sh  build_linux_x64_all.sh  build_linux_x86_all.sh  build_macos_all.sh  build_r818_linux_arch64_all.sh  check_style.sh  format_cmake.sh  format_code.sh
cmake/: R818.cmake  android.cmake  common.cmake  ios.cmake  linux.cmake  macos.cmake
libbuffer/: CMakeLists.txt  build_ios.sh  build_macos.sh
libbuffer/include/buffer/: BlockBuffer.h  BufferUtil.h  CharBuffer.h  RingBuffer.h
libbuffer/sample/: sample.cpp
libbuffer/src/: BlockBuffer.cpp  CharBuffer.cpp
libhandler/: CMakeLists.txt  build_android.sh  build_linux.sh
libhandler/include/handler/: Handler.h  HandlerThread.h  Looper.h  Message.h  MessageQueue.h  ReentrantLock.h  Runnable.h  ScheduleThread.h
libhandler/sample/: performance._test.cpp  sample.cpp
libhandler/src/: Handler.cpp  HandlerThread.cpp  Looper.cpp  Message.cpp  MessageQueue.cpp  ReentrantLock.cpp  ScheduleThread.cpp
libjson/: CMakeLists.txt  build_r818.sh
libjson/include/json/: DataPacket.h  cJSON.h
libjson/sample/: sample.cpp
libjson/sample/include/test/: TestConfig.h  TestLibConfig.h
libjson/src/: DataPacket.cpp
liblogger/: CMakeLists.txt  build_android.sh
liblogger/include/logger/: AndroidLogger.h  ConsoleLogger.h  FileLogger.h  ILogger.h  LoggerManager.h  iOSLogger.h  logger.h
liblogger/sample/: sample.cpp
liblogger/src/: AndroidLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  LoggerManager.cpp  iOSLogger.cpp  logger.cpp
